k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-deploy
spec:
  replicas: 1 # Começamos com 1 pod 
  selector:
    matchLabels:
      app: catalog-api
  template:
    metadata:
      labels:
        app: catalog-api
    spec:
      containers:
        - name: catalog-api
          image: arruda94/catalog-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"   # 10% de um núcleo (mili-cores)
              memory: "64Mi"
            limits:
              cpu: "250m"   # 25% de um núcleo
              memory: "128Mi"

          # Probes
          # Liveness: "Você travou?" Se falhar, o K8s reinicia o pod
          livenessProbe:
            httpGet:
              path: /  # Nossa rota de saúde
              port: 8000
            initialDelaySeconds: 15 # Espera 15s antes de começar a checar
            periodSeconds: 20       # Checa a cada 20s

          # Readiness: "Pode receber cliente?" Se falhar, o K8s para de mandar tráfego
          # Útil quando o app sobe mas o banco ainda tá conectando
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
